--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest",
+    "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": " pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.5.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.2",
+    "pm2": "^5.3.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
